--- a/Css/Log-in.css
+++ b/Css/Log-in.css
@@ -1,4 +1,4 @@
-* {
+* { 
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -14,13 +14,17 @@
 }
 
 body {
+    width: 100%;
     background: var(--bg-primary);
+
+    display: flex;
+    flex-direction: row;
 }
+
 /* Header */
 .header {
-    position: absolute;
-    width: 256px;
-    height: 888px;
+    width: 16%;
+
     padding: 10px;
     background: var(--bg-secundary);
 }
@@ -37,7 +41,7 @@ body {
 .figure__Image {
     cursor: pointer;
 }
-/* Figure paragraph */
+/* Figure text */
 .figure__p {
     font-size: 16px;
     font-weight: 500;
@@ -45,27 +49,26 @@ body {
     color: var(--color-primary);
     padding-left: 8px;
 }
-/* Header Span */
-.header__span {
+/* Header nav */
+.header__nav {
     width: 100%;
-    margin-top: 38px;
+    margin-top: 16%;
 
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
 }
-/* Span container */
-.span__container {
-    width: 150px;
-    height: 40px;
-    margin-bottom: 20px;
+/* Nav container */
+.nav__container {
+    width: 60%;
+    margin-bottom: 10%;
 
     display: flex;
     flex-direction: row;
     align-items: center;
     
 }
-/* Span containers logos */
+/* containers logos */
 .container__image {
     cursor: pointer;
 }
@@ -73,9 +76,8 @@ body {
 .container__link {
     text-decoration: none;
 }
-/* Span containers texts */
-.container__p {
-    height: 40px;
+/* texts of logos */
+.link__p {
     line-height: 40px;
     padding-left: 10px;
     font-size: 16px;
@@ -83,22 +85,17 @@ body {
     color: var(--color-primary);
     font-family: var(--primary-font);
 }
-/* Span figure */
-.span__figure {
-    width: 150px;
-    height: 40px;
-    margin-top: 296px;
+/* Container of log out */
+.nav-container {
+    width: 60%;
+    margin-top: 410px;
 
     display: flex;
     flex-direction: row;
     align-items: center;
 }
-/* Span figure logo exit */
-.figure__img {
-    cursor: pointer;
-}
-/* Span figure text */
-.figure__text {
+/* Text of log out */
+.link__text {
     height: 40px;
     line-height: 40px;
     padding-left: 10px;
@@ -109,23 +106,22 @@ body {
 }
 /* Main */
 .main {
-    width: 100%;
+    width: 84%;
 }
 /* Main article */
 .main__article {
-    width: 45%;
+    width: 39%;
     margin: 0 auto;
     
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
 }
 /* Search logo */
-.search__main {
+.article__image {
     transform: translate(35px, 13px);
 }
 /* Input search */
-.icono-placeholder__main{
+.article__input{
     margin-top: 24px;
     width: 500px;
     height: 40px;
@@ -136,228 +132,110 @@ body {
     padding: 10px;
 }
 /* Input search placheholder */
-.icono-placeholder__main::placeholder {
+.article__input::placeholder {
     color: var(--color-primary);
     padding-left: 33px;
     font-family: var(--primary-font);
 }
-
-/* Main article cars */
+/* Main article cards */
 .main-article {
-    width: 55%;
+    width: 72%;
     margin: 0 auto;
-    margin-top: 24px;
-    margin-left: 29%;
+    margin-top: 2%;
 
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
-/* Links redirection */
-.article__link {
-    height: 223px;
-    text-decoration: none;
-    margin-bottom: 25px;
-}
-
-/* Container cars */
+/* Container cards */
 .article__figure {
-    width: 260px;
-    height: 220px;
+    width: 31%;
+    height: 254px;
     background: var(--bg-third);
     border-radius: 8px;
     box-shadow: var(--box-shadow);
+    margin-bottom: 3%;
 
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
-/* Play logo images */
-.figure__Play__logo {
-    transform: translate(0px, 47px);
-    position: absolute;
-    cursor: pointer;
-}
-/* Images */
-.figure__image {
+/* Container of play and image */
+.figure__container {
+    margin: 0 auto;
     margin-top: 10px;
-    cursor: pointer;
 }
-/* Titles of cars */
-.container__title {
-    font-size: 16px;
-    font-family: var(--primary-font);
-    font-weight: 600;
-    text-align: left;
-    color: var(--color-primary);
+/* Links redirection */
+.container-link {
+    text-decoration: none;
 }
-/* Text of cars */
-.container__text {
-    padding-top: 8px;
-    padding-right: 53px;
-    font-size: 10px;
-    font-weight: 300;
-    font-family: var(--primary-font);
-    color:  var(--color-primary);
-
-}
-/* Container text, Welcome to Mexico */
-.figure-Mexico__container {
-    padding-top: 8px;
-    padding-right: 62px;
-
-    display: flex;
-    flex-direction: column;
-}
-/* Number logo, Mexico */
-.figure-mexiconumber__logo {
-    transform: translate(103px, 175px);
+/* Play logo */
+.link__image-play {
+    padding-left: 10px;
     position: absolute;
+    transform: translate(100%, 50%);
 }
-/* Eye logo, Mexico */
-.figure-mexicoeye__logo {
-    cursor: pointer;
-    transform: translate(75px, 170px);
-    position: absolute;
+/* Images of content */
+.container-image {
+    width: 275px;
+    margin-top: 5px;
 }
-
-.icono-placeholder__main::placeholder {
-    padding-left: 33px;
-    font-family: var(--primary-font);
-    color: var(--color-primary);
-}
-
-.search__main {
-    transform: translate(35px, 13px);
-}
-/* Container text, At the street Japan*/
-.figure-japan__container {
-    padding-top: 8px;
-    padding-right: 58px;
-
-    display: flex;
-    flex-direction: column;
-}
-/* Number logo, At the street Japan */
-.figure-japannumber__logo {
-    transform: translate(112px, 175px);
-    position: absolute;
-}
-/* Eye logo, At the street Japan */ 
-.figure-japaneye__logo {
-    cursor: pointer;
-    transform: translate(90px, 170px);
-    position: absolute;
-}
-/* Container text, Firefighters save the school */
-.figure-fire__container {
-    padding-top: 8px;
-    padding-right: 50px;
-
-    display: flex;
-    flex-direction: column;
-}
-/* Number logo, Firefighters */
-.figure-fireNumber__logo {
-    transform: translate(110px, 174px);
-    position: absolute;
-}
-/* Eye logo, Firefighters */
-.figure-fireeye__logo {
-    cursor: pointer;
-    transform: translate(88px, 170px);
-    position: absolute;
-}
-/* Container text, Know us tonight */
-.figure-know__container {
-    padding-top: 8px;
-    padding-right: 57px;
-
-    display: flex;
-    flex-direction: column;
-}
-/* Number logo, Know us tonight */
-.figure-knownumber__logo {
-    transform: translate(103px, 175px);
-    position: absolute;
-}
-/* Eye logo, know us tonight */
-.figure-knoweye__logo {
-    cursor: pointer;
-    transform: translate(75px, 170px);
-    position: absolute;
-}
-/* Container text, Colombian sausages */
-.figure-colombia__container {
-    padding-top: 8px;
-    padding-right: 57px;
-
-    display: flex;
-    flex-direction: column;
-}
-/* Number logo, Colombian sausages */
-.figure-colombianumber__logo {
-    transform: translate(103px, 175px);
-    position: absolute;
-}
-/*Eye logo, Colombian sausages */
-.figure-colombiaeye__logo {
-    cursor: pointer;
-    transform: translate(70px, 170px);
-    position: absolute;
-}
-/* Container text, Meet boon Alemania */
-.figure-meet__container {
-    padding-top: 8px;
-    padding-right: 62px;
-
-    display: flex;
-    flex-direction: column;
-}
-/* Number logo, Meet boon Alemania */
-.figure-meetnumber__logo {
-    transform: translate(112px, 175px);
-    position: absolute;
-}
-/* Eye logo, Meet boon Alemania */
-.figure-meeteye__logo {
-    cursor: pointer;
-    transform: translate(90px, 170px);
-    position: absolute;
-}
-/* Container text, Yuki in Japan */
-.figure-yuki__container {
-    padding-top: 8px;
-    padding-right: 70px;
-
-    display: flex;
-    flex-direction: column;
-}
-/* Number logo, Yuki in Japan */
-.figure-yukinumber__logo {
-    transform: translate(103px, 175px);
-    position: absolute;
-}
-/* Eye logo, Yuki in Japan */
-.figure-yukieye__logo {
-    cursor: pointer;
-    transform: translate(75px, 170px);
-    position: absolute;
-}
-/*End of page*/
-.footer {
-    width: 100%;
-    padding: 20px;
-
+/* Container of titles, eyes and numbers */
+.figure-container{
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 2%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
+}
+/* Title of cards */
+.container-figcaption {
+    font-size: 16px;
+    font-family: var(--primary-font);
+    color: var(--color-primary);
+    font-weight: 700;
+}
+/* Container of eyes and numbers */
+.container__div {
+    width: 20%;
+    
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+/* Eyes logos */
+.div__logo {
+    cursor: pointer;
+}
+/* Numbers */
+.div__text {
+    font-size: 11px;
+    color: var(--color-primary);
+    font-weight: 700;
+    font-family: system-ui;
+    margin-left: 4px;
+}
+/* Description on cards */
+.container__figcaption {
+    padding-top: 1%;
+    padding-left: 5%;
+    font-size: 10px;
+    font-family: var(--primary-font);
+    font-weight: 300;
+    color: var(--color-primary);
+}
+/* End of page */
+.main__footer {
+    padding: 2%;
+    width: 100%;
 }
 
 .footer__text {
-    padding-left: 222px;
     font-size: 12px;
+    text-align: center;
     font-weight: 200;
     font-family: var(--primary-font);
 }
+
+
