--- a/Css/Log-in.css
+++ b/Css/Log-in.css
@@ -24,15 +24,19 @@ body {
 /* Header */
 .header {
     width: 16%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     padding: 10px;
     background: var(--bg-secundary);
 }
 /* Figure Container */
-.header__figure {
+.nav__figure {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    margin-bottom: 25px;
 }
 /* Image of Perfil, Nebrazka Rodriguez */
 .figure__Image {
@@ -49,7 +53,6 @@ body {
 /* Header nav */
 .header__nav {
     width: 100%;
-    margin-top: 30px;
 
     display: flex;
     flex-direction: column;
@@ -82,9 +85,7 @@ body {
     font-family: var(--primary-font);
 }
 /* Container of log out */
-.nav-container {
-    margin-top: 410px;
-
+.header__container {
     display: flex;
     flex-direction: row;
     align-items: center;
