--- a/Css/video.css
+++ b/Css/video.css
@@ -24,12 +24,16 @@ body {
 
 /* Header */
 .header {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     width: 16%;
     padding: 10px;
     background: var(--bg-secundary);
 }
 /* Figure Container */
-.header__figure {
+.nav__figure {
+    margin-bottom: 25px;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -50,7 +54,6 @@ body {
 /* Header nav */
 .header__nav {
     width: 100%;
-    margin-top: 30px;
 
     display: flex;
     flex-direction: column;
@@ -63,7 +66,6 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    
 }
 /* containers logos */
 .container__image {
@@ -83,9 +85,7 @@ body {
     font-family: var(--primary-font);
 }
 /* Container of log out */
-.nav-container {
-    margin-top: 379px;
-
+.header__container {
     display: flex;
     flex-direction: row;
     align-items: center;
